Update service links in index.html for MEI

--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -37,14 +37,28 @@
       <h2>Serviços Avulsos</h2>
 
       <div class="services-grid">
-        <a class="service-card" data-servico="abertura-mei">Abertura de MEI</a>
-        <a class="service-card" data-servico="regularizacao-mei">Regularização de MEI</a>
-        <a class="service-card" data-servico="encerramento-mei">Encerramento de MEI</a>
-        <a class="service-card" data-servico="emissao-das">Emissão de DAS</a>
-        <a class="service-card" data-servico="dasn">Declaração Anual (DASN-SIMEI)</a>
-        <a class="service-card" data-servico="parcelamento">Parcelamento de Débitos</a>
-        <a class="service-card" data-servico="alteracao-mei">Alteração de Dados do MEI</a>
-      </div>
+  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=abertura-mei">
+    Abertura de MEI
+  </a>
+  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=regularizacao-mei">
+    Regularização de MEI
+  </a>
+  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=encerramento-mei">
+    Encerramento de MEI
+  </a>
+  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=emissao-das">
+    Emissão de DAS
+  </a>
+  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=dasn">
+    Declaração Anual (DASN-SIMEI)
+  </a>
+  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=parcelamento">
+    Parcelamento de Débitos
+  </a>
+  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=alteracao-mei">
+    Alteração de Dados do MEI
+  </a>
+</div>
     </section>
 
     <!-- ===== PLANOS ===== -->
