--- a/servicos/mei/compra/index.html
+++ b/servicos/mei/compra/index.html
@@ -16,11 +16,11 @@
   <nav class="breadcrumb container">
   <a href="/jl-servicos-contabeis/">Início</a>
   <span>›</span>
-  <a href="/jl-servicos-contabeis/servicos/">Serviços</a>
+  <a href="/jl-servicos-contabeis/servicos/mei/">Serviços</a>
   <span>›</span>
   <a href="/jl-servicos-contabeis/servicos/mei/">MEI</a>
   <span>›</span>
-  <strong id="breadcrumb-servico">Serviço</strong>
+  <strong>Abertura de MEI</strong>
 </nav>
 
   <main class="container compra-page">
