--- a/servicos/mei/compra/index.html
+++ b/servicos/mei/compra/index.html
@@ -71,7 +71,7 @@
             <textarea name="obs" rows="3"></textarea>
           </label>
 
-          <button type="submit" id="btn-enviar" disabled>
+          <button id="btn-enviar" type="submit">
             Enviar pedido
           </button>
 
