Atualizar o index.html

--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -82,14 +82,9 @@
             <li>✔ 10% de desconto em serviços avulsos</li>
           </ul>
 
-          <button class="btn-plan" data-plano="mei-basico">
-            Contratar plano básico
-          </button>
-        </div>
+          <button class="btn-plan" data-plano="mei-basico" type="button">
 
-        <!-- PLANO PREMIUM -->
-        <div class="plan-card premium">
-          <span class="badge">Plano recomendado</span>
+        <button class="btn-plan destaque" data-plano="mei-premium" type="button">
 
           <h3>Plano MEI Premium</h3>
           <p class="price">R$ 159,00 / mês</p>
