Atualizar o index.html

--- a/servicos/mei/compra/index.html
+++ b/servicos/mei/compra/index.html
@@ -16,14 +16,18 @@
   <nav class="breadcrumb container">
   <a href="/jl-servicos-contabeis/">Início</a>
   <span>›</span>
-  <a href="/jl-servicos-contabeis/servicos/mei/">Serviços</a>
+
+  <!-- Serviços volta para a HOME -->
+  <a href="/jl-servicos-contabeis/">Serviços</a>
   <span>›</span>
+
+  <!-- MEI vai para a página do MEI -->
   <a href="/jl-servicos-contabeis/servicos/mei/">MEI</a>
   <span>›</span>
-  <strong>Abertura de MEI</strong>
-</nav>
 
-  <main class="container compra-page">
+  <!-- Serviço atual (dinâmico, sem link) -->
+  <strong id="breadcrumb-servico">Serviço</strong>
+</nav>
 
     <!-- TÍTULO CENTRALIZADO -->
     <header class="compra-header">
