--- a/servicos/certidoes-regularizacoes/index.html
+++ b/servicos/certidoes-regularizacoes/index.html
@@ -1,54 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Certidões e Regularizações | J L Serviços Contábeis</title>
 
   <link rel="stylesheet" href="/jl-servicos-contabeis/style.css">
-  <link rel="stylesheet" href="./certidoes.css">
+  <link rel="stylesheet" href="../mei/mei.css">
 </head>
-
-<script src="./certidoes.js"></script>
 
 <body>
 
-  <nav class="breadcrumb container">
-    <a href="/jl-servicos-contabeis/">Início</a>
-    <span>›</span>
-    <a href="/jl-servicos-contabeis/servicos/">Serviços</a>
-    <span>›</span>
-    <strong>Certidões</strong>
-  </nav>
+<nav class="breadcrumb container">
+  <a href="/jl-servicos-contabeis/">Início</a>
+  <span>›</span>
+  <a href="/jl-servicos-contabeis/servicos/">Serviços</a>
+  <span>›</span>
+  <strong>Certidões</strong>
+</nav>
 
-  <main class="container mei-page">
+<main class="container mei-page">
 
-    <header class="mei-header">
-      <h1>Certidões e Regularizações</h1>
-      <p>Emissão e regularização de documentos fiscais com rapidez e segurança.</p>
-    </header>
+<header class="mei-header">
+  <h1>Certidões e Regularizações</h1>
+  <p>Emissão e regularização de documentos fiscais e cadastrais.</p>
+</header>
 
-    <section class="mei-section mei-servicos">
-      <h2>Serviços Disponíveis</h2>
+<section class="mei-section">
+  <div class="services-grid">
+    <a class="service-card" href="/jl-servicos-contabeis/servicos/compra/?servico=certidao-negativa">Certidão Negativa</a>
+    <a class="service-card" href="/jl-servicos-contabeis/servicos/compra/?servico=regularizacao-cadastral">Regularização Cadastral</a>
+  </div>
+</section>
 
-      <div class="services-grid">
-        <a class="service-card" href="./compra/?servico=certidao-negativa">
-          Certidão Negativa de Débitos
-        </a>
-        <a class="service-card" href="./compra/?servico=regularizacao-cnpj">
-          Regularização de CNPJ
-        </a>
-        <a class="service-card" href="./compra/?servico=regularizacao-fiscal">
-          Regularização Fiscal Completa
-        </a>
-      </div>
-    </section>
-
-  </main>
-
-  <a href="https://wa.me/5500000000000" class="cta-fixed" target="_blank">
-    Falar sobre Certidões
-  </a>
-
+</main>
 </body>
 </html>
