Atualizar o index.html

--- a/servicos/outros/index.html
+++ b/servicos/outros/index.html
@@ -1,57 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Outros Serviços | J L Serviços Contábeis</title>
 
   <link rel="stylesheet" href="/jl-servicos-contabeis/style.css">
-  <link rel="stylesheet" href="./outros-servicos.css">
+  <link rel="stylesheet" href="../mei/mei.css">
 </head>
-
-<script src="./outros-servicos.js"></script>
 
 <body>
 
-  <nav class="breadcrumb container">
-    <a href="/jl-servicos-contabeis/">Início</a>
-    <span>›</span>
-    <a href="/jl-servicos-contabeis/servicos/">Serviços</a>
-    <span>›</span>
-    <strong>Outros Serviços</strong>
-  </nav>
+<nav class="breadcrumb container">
+  <a href="/jl-servicos-contabeis/">Início</a>
+  <span>›</span>
+  <a href="/jl-servicos-contabeis/servicos/">Serviços</a>
+  <span>›</span>
+  <strong>Outros Serviços</strong>
+</nav>
 
-  <main class="container mei-page">
+<main class="container mei-page">
 
-    <header class="mei-header">
-      <h1>Outros Serviços</h1>
-      <p>Soluções financeiras e organizacionais para o dia a dia.</p>
-    </header>
+<header class="mei-header">
+  <h1>Outros Serviços</h1>
+  <p>Soluções práticas para organização e controle financeiro.</p>
+</header>
 
-    <section class="mei-section mei-servicos">
-      <h2>Serviços Disponíveis</h2>
+<section class="mei-section">
+  <div class="services-grid">
+    <a class="service-card" href="/jl-servicos-contabeis/servicos/compra/?servico=planilha-financeira">Planilha Financeira Pessoal</a>
+    <a class="service-card" href="/jl-servicos-contabeis/servicos/compra/?servico=organizacao-documentos">Organização de Documentos</a>
+    <a class="service-card" href="/jl-servicos-contabeis/servicos/compra/?servico=orientacao-financeira">Orientação Financeira Básica</a>
+  </div>
+</section>
 
-      <div class="services-grid">
-        <a class="service-card" href="./compra/?servico=planilha-financeira">
-          Planilha Financeira Básica
-        </a>
-        <a class="service-card" href="./compra/?servico=organizacao-financeira">
-          Organização Financeira Pessoal
-        </a>
-        <a class="service-card" href="./compra/?servico=controle-despesas">
-          Controle de Despesas
-        </a>
-        <a class="service-card" href="./compra/?servico=orientacao-financeira">
-          Orientação Financeira Básica
-        </a>
-      </div>
-    </section>
-
-  </main>
-
-  <a href="https://wa.me/5500000000000" class="cta-fixed" target="_blank">
-    Falar sobre Outros Serviços
-  </a>
-
+</main>
 </body>
 </html>
