Atualizar o index.html

--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -10,7 +10,7 @@
   <!-- CSS EXCLUSIVO MEI -->
   <link rel="stylesheet" href="./mei.css">
 </head>
-  
+
 <script src="./mei.js"></script>
 
 <body>
@@ -37,79 +37,101 @@
       <h2>Serviços Avulsos</h2>
 
       <div class="services-grid">
-  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=abertura-mei">
-    Abertura de MEI
-  </a>
-  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=regularizacao-mei">
-    Regularização de MEI
-  </a>
-  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=encerramento-mei">
-    Encerramento de MEI
-  </a>
-  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=emissao-das">
-    Emissão de DAS
-  </a>
-  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=dasn">
-    Declaração Anual (DASN-SIMEI)
-  </a>
-  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=parcelamento">
-    Parcelamento de Débitos
-  </a>
-  <a class="service-card" href="/jl-servicos-contabeis/servicos/mei/compra/?servico=alteracao-mei">
-    Alteração de Dados do MEI
-  </a>
-</div>
+
+        <a class="service-card"
+           href="/jl-servicos-contabeis/servicos/compra/?categoria=mei&servico=abertura-mei">
+          Abertura de MEI
+          <span>R$ 148,99</span>
+        </a>
+
+        <a class="service-card"
+           href="/jl-servicos-contabeis/servicos/compra/?categoria=mei&servico=regularizacao-mei">
+          Regularização de MEI
+          <span>R$ 198,99</span>
+        </a>
+
+        <a class="service-card"
+           href="/jl-servicos-contabeis/servicos/compra/?categoria=mei&servico=encerramento-mei">
+          Encerramento de MEI
+          <span>R$ 128,99</span>
+        </a>
+
+        <a class="service-card"
+           href="/jl-servicos-contabeis/servicos/compra/?categoria=mei&servico=emissao-das">
+          Emissão de DAS
+          <span>R$ 48,99</span>
+        </a>
+
+        <a class="service-card"
+           href="/jl-servicos-contabeis/servicos/compra/?categoria=mei&servico=dasn">
+          Declaração Anual (DASN-SIMEI)
+          <span>R$ 98,99</span>
+        </a>
+
+        <a class="service-card"
+           href="/jl-servicos-contabeis/servicos/compra/?categoria=mei&servico=parcelamento">
+          Parcelamento de Débitos
+          <span>R$ 178,99</span>
+        </a>
+
+        <a class="service-card"
+           href="/jl-servicos-contabeis/servicos/compra/?categoria=mei&servico=alteracao-mei">
+          Alteração de Dados do MEI
+          <span>R$ 78,99</span>
+        </a>
+
+      </div>
     </section>
 
-   <!-- ===== PLANOS ===== -->
-<section class="mei-section mei-planos">
+    <!-- ===== PLANOS ===== -->
+    <section class="mei-section mei-planos" id="planos">
 
-  <h2 class="plans-title">Escolha o plano ideal para o seu MEI</h2>
+      <h2 class="plans-title">Escolha o plano ideal para o seu MEI</h2>
 
-  <div class="plans-grid">
+      <div class="plans-grid">
 
-    <!-- PLANO BÁSICO -->
-    <div class="plan-card basic">
-      <h3>Plano MEI Básico</h3>
-      <p class="price">R$ 99,00 / mês</p>
+        <!-- PLANO BÁSICO -->
+        <div class="plan-card basic">
+          <h3>Plano MEI Básico</h3>
+          <p class="price">R$ 99,00 / mês</p>
 
-      <ul>
-        <li>✔ Emissão mensal do DAS</li>
-        <li>✔ Lembretes de vencimento</li>
-        <li>✔ DASN-SIMEI (1x ao ano)</li>
-        <li>✔ Acompanhamento básico</li>
-        <li>✔ Suporte via WhatsApp</li>
-        <li>✔ 10% de desconto em serviços avulsos</li>
-      </ul>
+          <ul>
+            <li>✔ Emissão mensal do DAS</li>
+            <li>✔ Lembretes de vencimento</li>
+            <li>✔ DASN-SIMEI (1x ao ano)</li>
+            <li>✔ Acompanhamento básico</li>
+            <li>✔ Suporte via WhatsApp</li>
+            <li>✔ 10% de desconto em serviços avulsos</li>
+          </ul>
 
-      <button class="btn-plan" type="button">
-        Contratar plano básico
-      </button>
-    </div>
+          <button class="btn-plan" type="button">
+            Contratar plano básico
+          </button>
+        </div>
 
-    <!-- PLANO PREMIUM -->
-    <div class="plan-card premium destaque">
-      <h3>Plano MEI Premium</h3>
-      <p class="price">R$ 159,00 / mês</p>
+        <!-- PLANO PREMIUM -->
+        <div class="plan-card premium destaque">
+          <h3>Plano MEI Premium</h3>
+          <p class="price">R$ 159,00 / mês</p>
 
-      <ul>
-        <li>✔ Todos os benefícios do plano básico</li>
-        <li>✔ Regularização fiscal completa</li>
-        <li>✔ Parcelamento de débitos</li>
-        <li>✔ Emissão de certidões</li>
-        <li>✔ Orientação personalizada</li>
-        <li>✔ Relatório mensal de situação</li>
-        <li>✔ Suporte prioritário</li>
-        <li>✔ 20% de desconto em serviços avulsos</li>
-      </ul>
+          <ul>
+            <li>✔ Todos os benefícios do plano básico</li>
+            <li>✔ Regularização fiscal completa</li>
+            <li>✔ Parcelamento de débitos</li>
+            <li>✔ Emissão de certidões</li>
+            <li>✔ Orientação personalizada</li>
+            <li>✔ Relatório mensal de situação</li>
+            <li>✔ Suporte prioritário</li>
+            <li>✔ 20% de desconto em serviços avulsos</li>
+          </ul>
 
-      <button class="btn-plan destaque" type="button">
-        Contratar plano premium
-      </button>
-    </div>
+          <button class="btn-plan destaque" type="button">
+            Contratar plano premium
+          </button>
+        </div>
 
-  </div>
-</section>
+      </div>
+    </section>
 
   </main>
 
