Atualizar o index.html

--- a/servicos/outros/index.html
+++ b/servicos/outros/index.html
@@ -5,35 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Outros Serviços | J L Serviços Contábeis</title>
 
+  <!-- CSS GLOBAL -->
   <link rel="stylesheet" href="/jl-servicos-contabeis/style.css">
+  <!-- CSS BASE (PADRÃO MEI) -->
   <link rel="stylesheet" href="../mei/mei.css">
 </head>
 
 <body>
 
-<nav class="breadcrumb container">
-  <a href="/jl-servicos-contabeis/">Início</a>
-  <span>›</span>
-  <a href="/jl-servicos-contabeis/servicos/">Serviços</a>
-  <span>›</span>
-  <strong>Outros Serviços</strong>
-</nav>
+  <!-- ===== BREADCRUMB ===== -->
+  <nav class="breadcrumb container">
+    <a href="/jl-servicos-contabeis/">Início</a>
+    <span>›</span>
+    <a href="/jl-servicos-contabeis/servicos/">Serviços</a>
+    <span>›</span>
+    <strong>Outros Serviços</strong>
+  </nav>
 
-<main class="container mei-page">
+  <main class="container mei-page">
 
-<header class="mei-header">
-  <h1>Outros Serviços</h1>
-  <p>Soluções práticas para organização e controle financeiro.</p>
-</header>
+    <!-- ===== TÍTULO ===== -->
+    <header class="mei-header">
+      <h1>Outros Serviços</h1>
+      <p>Soluções práticas para organização, controle e educação financeira.</p>
+    </header>
 
-<section class="mei-section">
-  <div class="services-grid">
-    <a class="service-card" href="/jl-servicos-contabeis/servicos/compra/?servico=planilha-financeira">Planilha Financeira Pessoal</a>
-    <a class="service-card" href="/jl-servicos-contabeis/servicos/compra/?servico=organizacao-documentos">Organização de Documentos</a>
-    <a class="service-card" href="/jl-servicos-contabeis/servicos/compra/?servico=orientacao-financeira">Orientação Financeira Básica</a>
-  </div>
-</section>
+    <!-- ===== SERVIÇOS ===== -->
+    <section class="mei-section mei-servicos">
+      <h2>Serviços Disponíveis</h2>
 
-</main>
+      <div class="services-grid">
+
+        <a class="service-card"
+           href="/jl-servicos-contabeis/servicos/compra/?categoria=outros&servico=planilha-financeira">
+          Planilha Financeira Pessoal
+          <span>Controle mensal de receitas e despesas</span>
+        </a>
+
+        <a class="service-card"
+           href="/jl-servicos-contabeis/servicos/compra/?categoria=outros&servico=organizacao-documentos">
+          Organização de Documentos
+          <span>Digitalização e classificação</span>
+        </a>
+
+        <a class="service-card"
+           href="/jl-servicos-contabeis/servicos/compra/?categoria=outros&servico=orientacao-financeira">
+          Orientação Financeira Básica
+          <span>Planejamento e educação financeira</span>
+        </a>
+
+      </div>
+    </section>
+
+  </main>
+
+  <!-- CTA FIXO -->
+  <a href="https://wa.me/5500000000000" class="cta-fixed" target="_blank">
+    Falar sobre Outros Serviços
+  </a>
+
 </body>
 </html>
