Atualizar o Index.html

--- a/servicos/compra/Index.html
+++ b/servicos/compra/Index.html
@@ -4,97 +4,52 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <title>Contratar Serviço | J L Serviços Contábeis</title>
+  <title>Compra de Serviço | J L Serviços Contábeis</title>
 
   <!-- CSS GLOBAL -->
   <link rel="stylesheet" href="/jl-servicos-contabeis/style.css">
-  <!-- CSS COMPRA -->
-  <link rel="stylesheet" href="./compra.css">
 </head>
 
 <body>
 
-  <!-- ===== BREADCRUMB ===== -->
+  <!-- BREADCRUMB -->
   <nav class="breadcrumb container">
     <a href="/jl-servicos-contabeis/">Início</a>
     <span>›</span>
     <a href="/jl-servicos-contabeis/servicos/">Serviços</a>
     <span>›</span>
-    <strong id="breadcrumb-servico">Serviço</strong>
+    <strong>Compra</strong>
   </nav>
 
-  <main class="container compra-page">
+  <main class="container mei-page">
 
-    <!-- ===== CABEÇALHO ===== -->
-    <header class="compra-header">
-      <h1 id="titulo-servico">Serviço</h1>
-
-      <!-- VALOR -->
-      <div id="valor-plano" class="valor-plano"></div>
-
-      <!-- AVISO ECONOMIA -->
-      <div id="aviso-economia" class="aviso-economia" style="display:none"></div>
+    <header class="mei-header">
+      <h1 id="service-title">Serviço</h1>
+      <p id="service-description">
+        Finalize a contratação do serviço selecionado.
+      </p>
     </header>
 
-    <!-- ===== GRID ===== -->
-    <section class="compra-grid">
+    <section class="mei-section">
+      <h2>Resumo do Serviço</h2>
 
-      <!-- ===== DESCRIÇÃO ===== -->
-      <div class="card-descricao">
-
-        <!-- PREMIUM -->
-        <div id="mensagem-premium" class="card-premium" style="display:none">
-          ⭐ Você está fazendo a escolha certa!
-        </div>
-
-        <h2>O que está incluso</h2>
-        <ul id="lista-inclusos"></ul>
+      <div class="service-card">
+        <p><strong>Serviço:</strong> <span id="service-name">—</span></p>
+        <p><strong>Valor:</strong> <span id="service-price">A definir</span></p>
       </div>
+    </section>
 
-      <!-- ===== FORMULÁRIO ===== -->
-      <div class="card-form">
-        <h2>Seus dados</h2>
+    <section class="mei-section">
+      <button class="cta-button" disabled>
+        Finalizar Compra
+      </button>
 
-        <form id="form-pedido">
-
-          <label>
-            Nome completo*
-            <input type="text" name="nome" required>
-          </label>
-
-          <label>
-            E-mail*
-            <input type="email" name="email" required>
-          </label>
-
-          <label>
-            CPF*
-            <input type="text" name="cpf" required>
-          </label>
-
-          <label>
-            WhatsApp*
-            <input type="text" name="whatsapp" required>
-          </label>
-
-          <label>
-            Observações
-            <textarea name="obs" rows="3"></textarea>
-          </label>
-
-          <button id="btn-enviar" type="submit" disabled>
-            Enviar pedido
-          </button>
-
-        </form>
-      </div>
-
+      <p style="margin-top: 1rem; opacity: 0.6;">
+        (Integração será ativada no próximo passo)
+      </p>
     </section>
 
   </main>
-
-  <!-- JS ÚNICO DA COMPRA -->
-  <script type="module" src="./compra.js"></script>
 
 </body>
 </html>
