--- a/servicos/compra/index.html
+++ b/servicos/compra/index.html
@@ -13,13 +13,13 @@
 
   <!-- BREADCRUMB -->
   <nav class="breadcrumb">
-    <a href="/">Início</a>
+    <a href="/jl-servicos-contabeis/">Início</a>
     <span>›</span>
-    <a href="/">Serviços</a>
+    <a href="/jl-servicos-contabeis/">Serviços</a>
     <span>›</span>
-    <a href="#" id="breadcrumbCategoria">Categoria</a>
+    <a id="breadcrumbCategoria" href="#">Categoria</a>
     <span>›</span>
-    <span id="breadcrumbServico">Serviço</span>
+    <span id="breadcrumbAtual">Serviço</span>
   </nav>
 
   <h1 class="titulo-servico" id="nomeServico">
@@ -36,7 +36,6 @@
         Descrição do serviço.
       </p>
 
-      <!-- O que está incluso -->
       <ul id="inclusosServico"></ul>
 
       <div class="valor">
@@ -98,4 +97,3 @@
 <script src="./compra.js"></script>
 </body>
 </html>
-
