--- a/servicos/compra/index.html
+++ b/servicos/compra/index.html
@@ -11,16 +11,8 @@
 
 <main class="container">
 
-  <!-- BREADCRUMB -->
-  <nav class="breadcrumb">
-    <a href="/jl-servicos-contabeis/">Início</a>
-    <span>›</span>
-    <a href="/jl-servicos-contabeis/">Serviços</a>
-    <span>›</span>
-    <a id="breadcrumbCategoria" href="#">Categoria</a>
-    <span>›</span>
-    <span id="breadcrumbAtual">Serviço</span>
-  </nav>
+  <!-- BREADCRUMB (DINÂMICO PELO JS) -->
+  <nav class="breadcrumb" id="breadcrumb"></nav>
 
   <h1 class="titulo-servico" id="nomeServico">
     Serviço
