--- a/servicos/certificado-digital/index.html
+++ b/servicos/certificado-digital/index.html
@@ -15,12 +15,12 @@
 
   <!-- ===== BREADCRUMB ===== -->
   <nav class="breadcrumb container">
-    <a href="/jl-servicos-contabeis/">Início</a>
-    <span>›</span>
-    <a href="/jl-servicos-contabeis/servicos/">Serviços</a>
-    <span>›</span>
-    <strong>Certificado Digital</strong>
-  </nav>
+  <a href="/jl-servicos-contabeis/">Início</a>
+  <span>›</span>
+  <a href="/jl-servicos-contabeis/servicos/index.html">Serviços</a>
+  <span>›</span>
+  <strong>Certificado Digital</strong>
+</nav>
 
   <main class="container mei-page">
 
